examples/test/testpolicy10007.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10007
  namespace: namespace180
spec:
  podSelector:
    matchLabels:
      key25: value16
      key39: value37
      key31: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value33
          key24: value48
          key25: value36
      podSelector:
        matchLabels:
          key30: value45
          key10: value42
          key26: value36
